[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jwstGiantPlanets"
version = "0.1.0"
description = "Custom JWST data reduction and visualization pipelines for giant planets and solar system targets"
readme = "README.md"
authors = [
    {name = "Oliver R. T. King", email = "ortk2@leicester.ac.uk"},
    {name = "Leigh N. Fletcher"},
    {name = "Jake Harkett"},
    {name = "Michael T. Roman"},
    {name = "Henrik Melin"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.10"
dependencies = [
    "astropy",
    "matplotlib",
    "numpy",
    "spiceypy",
    "scipy",
    "tqdm",
    "planetmapper",
    "jwst",
]

[project.urls]
"Homepage" = "https://github.com/JWSTGiantPlanets/pipelines"
"Bug Tracker" = "https://github.com/JWSTGiantPlanets/pipelines/issues"
"Documentation" = "https://github.com/JWSTGiantPlanets/pipelines"

[project.scripts]
miri-pipeline = "jwstGiantPlanets.miri_pipeline:main"
nirspec-pipeline = "jwstGiantPlanets.nirspec_pipeline:main"
jwst-navigate = "jwstGiantPlanets.navigate_jwst_observations:main"

[tool.setuptools]
packages = ["jwstGiantPlanets"]

[tool.black]
skip-string-normalization = true
exclude = ""
# Manually set exclude="" to prevent black using .gitignore due
# to black not parsing trailing slashes in .gitignore correctly
# https://github.com/psf/black/issues/3694


[tool.isort]
profile = "black"


[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C",
    "no-member",
    "unused-variable",
    "no-else-return",
    "use-dict-literal",
    "duplicate-code",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-statements",
    "too-many-branches",
    "too-many-public-methods",
    "too-many-nested-blocks",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-return-statements",
    "too-many-positional-arguments",
]
enable = ["useless-suppression"]

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX"] # Allow TODO comments, but not FIXME or XXX